--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@
                 <div class="name">INESS IRBOUH</div>
 
                 <p class="tagline">
-                    Étudiante en Master 1 <strong>Data Science for Social Sciences</strong> —
-                    Data Analyst & Machine Learning Enthusiast.
+                    Étudiante en Master 1 <strong>Data Science for Social Sciences</strong> à la recherche d'un Stage en Analyse de Données.
                 </p>
 
                 <div class="pill-row">
