--- a/index.html
+++ b/index.html
@@ -262,38 +262,47 @@
 
 
         <!-- ⭐ PROJETS -->
-        <section id="projets">
-            <h2>Projets sélectionnés</h2>
+<section id="projets">
+    <h2>Projets sélectionnés</h2>
 
-            <div class="projects-grid">
+    <div class="projects-grid">
 
-                <article class="project-card">
-                    <div class="project-icon">⚽</div>
-                    <div class="project-title">Analyse des Coupes du Monde</div>
-                    <a class="project-link" href="project1.html">Voir le projet</a>
-                </article>
+        <article class="project-card">
+            <div class="project-icon">⚽</div>
+            <div class="project-title">Analyse des Coupes du Monde</div>
+            <a class="project-link" href="project1.html">Voir le projet</a>
+        </article>
 
-                <article class="project-card">
-                    <div class="project-icon">📊</div>
-                    <div class="project-title">Prédiction du Churn Client</div>
-                    <a class="project-link" href="project2.html">Voir le projet</a>
-                </article>
+        <article class="project-card">
+            <div class="project-icon">📊</div>
+            <div class="project-title">Prédiction du Churn Client</div>
+            <a class="project-link" href="project2.html">Voir le projet</a>
+        </article>
 
-                <article class="project-card">
-                    <div class="project-icon">📉</div>
-                    <div class="project-title">AFC – Tâches ménagères</div>
-                    <a class="project-link" href="project3.html">Voir le projet</a>
-                </article>
+        <article class="project-card">
+            <div class="project-icon">📉</div>
+            <div class="project-title">AFC – Tâches ménagères</div>
+            <a class="project-link" href="project3.html">Voir le projet</a>
+        </article>
 
-                <article class="project-card">
-                    <div class="project-icon">🐍</div>
-                    <div class="project-title">Analyse des heures complémentaires</div>
-                    <a class="project-link" href="project4.html">Voir le projet</a>
-                </article>
+        <article class="project-card">
+            <div class="project-icon">🐍</div>
+            <div class="project-title">Analyse des heures complémentaires</div>
+            <a class="project-link" href="project4.html">Voir le projet</a>
+        </article>
 
+        <!-- 🆕 PROJET 5 – BDA -->
+        <article class="project-card">
+            <div class="project-icon">🗄️</div>
+            <div class="project-title">
+                Base de données & Analyse décisionnelle<br>
+                SQL • Python • Data Visualisation
             </div>
-        </section>
+            <a class="project-link" href="project5.html">Voir le projet</a>
+        </article>
 
+    </div>
+</section>
 
 
         <!-- ⭐ CONTACT -->
