--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             <a href="#accueil" class="nav-item">Accueil</a>
             <a href="#projets" class="nav-item">Projets</a>
             <a href="#apropos" class="nav-item">À propos</a>
+            <a href="#competences-sql" class="nav-item">SQL</a>
             <a href="#contact" class="nav-item">Contact</a>
         </div>
     </nav>
@@ -261,48 +262,69 @@
 
 
 
-        <!-- ⭐ PROJETS -->
-<section id="projets">
-    <h2>Projets sélectionnés</h2>
-
-    <div class="projects-grid">
-
-        <article class="project-card">
-            <div class="project-icon">⚽</div>
-            <div class="project-title">Analyse des Coupes du Monde</div>
-            <a class="project-link" href="project1.html">Voir le projet</a>
-        </article>
-
-        <article class="project-card">
-            <div class="project-icon">📊</div>
-            <div class="project-title">Prédiction du Churn Client</div>
-            <a class="project-link" href="project2.html">Voir le projet</a>
-        </article>
-
-        <article class="project-card">
-            <div class="project-icon">📉</div>
-            <div class="project-title">AFC – Tâches ménagères</div>
-            <a class="project-link" href="project3.html">Voir le projet</a>
-        </article>
-
-        <article class="project-card">
-            <div class="project-icon">🐍</div>
-            <div class="project-title">Analyse des heures complémentaires</div>
-            <a class="project-link" href="project4.html">Voir le projet</a>
-        </article>
-
-        <!-- 🆕 PROJET 5 – BDA -->
-        <article class="project-card">
-            <div class="project-icon">🗄️</div>
-            <div class="project-title">
-                Base de données & Analyse décisionnelle<br>
-                SQL • Python • Data Visualisation
+        <!-- ⭐ COMPÉTENCES SQL -->
+        <section id="competences-sql">
+            <h2>Ce que je sais faire en SQL</h2>
+            <div class="card">
+                <p>
+                    J’utilise SQL comme un vrai outil d’analyse : je pars d’une question, je retrouve les bonnes tables,
+                    je structure la requête, puis je transforme le résultat en indicateurs compréhensibles.
+                </p>
+                <ul>
+                    <li>Modéliser une base : création de tables, clés primaires/étrangères, cohérence et normalisation</li>
+                    <li>Écrire des requêtes d’analyse : jointures, filtres, agrégations, groupements, fonctions (COUNT, AVG, SUM…)</li>
+                    <li>Travailler avec des sous-requêtes et des vues pour rendre les analyses plus propres et réutilisables</li>
+                    <li>Construire des indicateurs (KPI) et extractions “métier” à partir de données relationnelles</li>
+                    <li>Connecter SQL à Python pour automatiser l’extraction et produire des tableaux/graphes</li>
+                </ul>
             </div>
-            <a class="project-link" href="project5.html">Voir le projet</a>
-        </article>
+        </section>
 
-    </div>
-</section>
+
+
+        <!-- ⭐ PROJETS -->
+        <section id="projets">
+            <h2>Projets sélectionnés</h2>
+
+            <div class="projects-grid">
+
+                <article class="project-card">
+                    <div class="project-icon">⚽</div>
+                    <div class="project-title">Analyse des Coupes du Monde</div>
+                    <a class="project-link" href="project1.html">Voir le projet</a>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-icon">📊</div>
+                    <div class="project-title">Prédiction du Churn Client</div>
+                    <a class="project-link" href="project2.html">Voir le projet</a>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-icon">📉</div>
+                    <div class="project-title">AFC – Tâches ménagères</div>
+                    <a class="project-link" href="project3.html">Voir le projet</a>
+                </article>
+
+                <article class="project-card">
+                    <div class="project-icon">🐍</div>
+                    <div class="project-title">Analyse des heures complémentaires</div>
+                    <a class="project-link" href="project4.html">Voir le projet</a>
+                </article>
+
+                <!-- 🆕 PROJET 5 – BDA -->
+                <article class="project-card">
+                    <div class="project-icon">🗄️</div>
+                    <div class="project-title">
+                        Base de données & Analyse décisionnelle<br>
+                        SQL • Python • Data Visualisation
+                    </div>
+                    <a class="project-link" href="project5.html">Voir le projet</a>
+                </article>
+
+            </div>
+        </section>
+
 
 
         <!-- ⭐ CONTACT -->
@@ -310,15 +332,15 @@
             <h2>Contact</h2>
 
             <div class="card contact-box">
-                <div>📧 <strong>Email :</strong> 
+                <div>📧 <strong>Email :</strong>
                     <a href="mailto:iness.irbouh@gmail.com">iness.irbouh@gmail.com</a>
                 </div>
 
-                <div>💼 <strong>LinkedIn :</strong> 
+                <div>💼 <strong>LinkedIn :</strong>
                     <a href="https://www.linkedin.com/in/iness-irbouh-4465b2253/" target="_blank">Profil LinkedIn</a>
                 </div>
 
-                <div>🐙 <strong>GitHub :</strong> 
+                <div>🐙 <strong>GitHub :</strong>
                     <a href="https://iness-irbouh.github.io/" target="_blank">Portfolio GitHub</a>
                 </div>
             </div>
