--- a/project5.html
+++ b/project5.html
@@ -242,11 +242,11 @@
         </p>
 
         <div class="btn-row">
-          <a class="btn" href="code/Projet%20BDA.sql" target="_blank">🗄️ Script SQL — Création de la base</a>
-          <a class="btn" href="code/requete%20projet.sql" target="_blank">🔎 Requêtes SQL — Analyses</a>
-          <a class="btn" href="code/Partie%20Python%20BDA.py" target="_blank">🐍 Python — Intégration SQL + Analyse</a>
-          <a class="btn" href="code/Resultats_Graphiques_Projet_BDA.pdf" target="_blank">📊 PDF — Graphiques</a>
-          <a class="btn" href="code/Rapport_Projet_BDA_IPS_Resultats_Bac_Paris.pdf" target="_blank">📑 PDF — Rapport</a>
+          <a class="btn" href="code/Projet%20BDA.sql" target="_blank">🗄️ Script SQL:Création de la base</a>
+          <a class="btn" href="code/requete%20projet.sql" target="_blank">🔎 Requêtes SQL: Analyses</a>
+          <a class="btn" href="code/Partie%20Python%20BDA.py" target="_blank">🐍 Python + Intégration SQL + Analyse</a>
+          <a class="btn" href="code/Resultats_Graphiques_Projet_BDA.pdf" target="_blank">📊 PDF Graphiques de la modélisation Python </a>
+          <a class="btn" href="code/Rapport_Projet_BDA_IPS_Resultats_Bac_Paris.pdf" target="_blank">📑 PDF Rapport</a>
         </div>
 
 
